<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_bar"
    android:orientation="horizontal"
    android:paddingTop="5dp" >

    <Button
        android:id="@+id/button_files"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/btn_files"
        android:onClick="onBottomButtonClick"
        android:text="@string/files_title"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/btn_upload"
        android:onClick="onBottomButtonClick"
        android:text="@string/upload_title"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <!--
         Button
            android:layout_width="0dp"  android:layout_weight="1" android:onClick="onBottomButtonClick"
            android:layout_height="wrap_content" android:background="@null"  android:textColor="@color/white"
            android:text="@string/request_title" android:textSize="10sp"  android:drawableTop="@drawable/btn_request"
            android:id="@+id/button_request" android:layout_gravity="left|center_vertical"/
    -->

    <Button
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/btn_settings"
        android:onClick="onBottomButtonClick"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="10sp" />

</LinearLayout>