<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
            android:id="@+id/settingsActionBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/action_bar" />

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background_splash_color">

        <LinearLayout
                android:id="@+id/contentLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="10dp"
                        android:text="@string/state"
                        android:textColor="@color/settings_title"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <View style="@style/SettingsTitleBorder"/>
            </LinearLayout>

            <RelativeLayout
                    android:id="@+id/rlAutoUpload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp">

                <TextView
                        android:id="@+id/tvAutoUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/auto_upload"
                        android:textColor="@color/BLACK_TEXTCOLOR"
                        android:textSize="20sp"/>

                <org.jraf.android.backport.switchwidget.Switch
                        android:id="@+id/switchAutoUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@color/settings_blue"/>
            </RelativeLayout>

            <View style="@style/SettingsBorder"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="40dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="10dp"
                        android:text="@string/folder"
                        android:textColor="@color/settings_title"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <View style="@style/SettingsTitleBorder"/>
            </LinearLayout>

            <RelativeLayout
                    android:id="@+id/rlSelectFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <TextView
                        android:id="@+id/tvFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/folder_default"
                        android:textColor="@color/BLACK_TEXTCOLOR"
                        android:textSize="20sp"/>

                <Button
                        android:id="@+id/btnSelectFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:drawableRight="@drawable/arrow"
                        android:textColor="@color/settings_blue"
                        android:textSize="20sp"/>
            </RelativeLayout>

            <View style="@style/SettingsBorder"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="10dp"
                        android:text="@string/upload_option"
                        android:textColor="@color/settings_title"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <View style="@style/SettingsTitleBorder"/>
            </LinearLayout>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:id="@+id/rbWiFiOnly"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/wi_fi_only"></RadioButton>

                <RadioButton
                        android:id="@+id/rbWiFiCell"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/wi_fi_cell"></RadioButton>

            </RadioGroup>

            <View android:layout_marginBottom="40dp" style="@style/SettingsBorder"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>